fixed some page overflow issur

--- a/src/Style/app.scss
+++ b/src/Style/app.scss
@@ -12,7 +12,7 @@
 
 #page1 {
     width: 100%;
-    ma-height: 600vh;
+    max-height: 600vh;
 }
 
 .container {
